messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment-green
  labels:
    app: django-messaging
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: green
  template:
    metadata:
      labels:
        app: django-messaging
        version: green
    spec:
      containers:
      - name: django-app
        image: httpd:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
