messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-django-service
spec:
  selector:
    app: django-messaging
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
