messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  annotations:
    # This annotation tells Kubernetes to use the NGINX controller we enabled
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # Define the host name we will use for testing
  - host: django-app.local 
    http:
      paths:
      # Route for the main app (/)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-app-service # Target the internal service
            port:
              number: 80 # Target the Service's exposed port (80)
      
      # Route for the /api/ path (as required by the objective)
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: django-app-service
            port:
              number: 80
